// Code generated by oracle. DO NOT EDIT.

syntax = "proto3";

package service.user.pb;

option go_package = "github.com/synnaxlabs/synnax/pkg/service/user/pb";

// User is an account entity representing a person accessing the Synnax system. Users
// can have roles assigned for permission management.
message User {
  // key is the unique identifier for this user.
  string key = 1;
  // username is the unique login name for the user.
  string username = 2;
  // first_name is the user's first name.
  string first_name = 3;
  // last_name is the user's last name.
  string last_name = 4;
  // root_user is true if this is a root/admin user with full system access. Root users
  // cannot be deleted.
  bool root_user = 5;
}
